--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,11 +1,7 @@
 name: Maven CI/CD
 
 on:
-  push:
-    branches: 
-      - 'main'
-    tags: [v*]
-  workflow_dispatch:
+  on: [push,workflow_dispatch]
 
 jobs:
   build_and_coverage_report:
