--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,6 +1,13 @@
 name: Maven CI/CD
 
-on: [push,workflow_dispatch]
+on:
+  push:
+    branches: 
+      - 'main'
+    tags: [v*]
+  workflow_dispatch:
+  pull_request:
+
 
 jobs:
   build_and_coverage_report:
@@ -65,8 +72,5 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           level: warning
-  
-
-
 
      
